@@ -64,6 +64,7 @@ Effects:
   o Fix graph legend display when using --plot octave.  (robs)
   o Fix rare crash with `rate' effect.  (robs)
   o Fix [2190767] `norm' under-amplifying in some cases.  (George Yohng)
+  o Fix [2007062] Earwax effect can overflow; should clip. (robs)
   o Trim will now skip past 2G point correctly. (cbagwell)
   o Improved handling of speed changes in the effects chain.  (robs)
 
